--- a/src/config.json
+++ b/src/config.json
@@ -1,4 +1,4 @@
 {
-    "ClientId": "699037992696-igeq9ne3vikda9liq31fq6rclu3ftt07.apps.googleusercontent.com",
-    "Secret": "2QRnziZDXiP_diVZnuc5DShq"
+    "ClientId": "*",
+    "Secret": "*"
 }
